fix: quark